# linux-api-examples

./: .gitignore  README.md
DRM-KMS/: README.md
Wayland/: README.md  client.c  make.sh  pointer.c  seat.c  triangle.c
Wayland/egl/: init_window.c  make.sh
Wayland/examples/: client2.c
dbus/: README.md
dev-input/: README.md
dev-input/libinput-api-example/: CMakeLists.txt  README.md  main.cpp
drm/: README.md
libinput-api-example/: CMakeLists.txt  main.cpp
notes/: kernel.md  tablet.md
pipewire/: README.md
posix/: CMakeLists.txt  README.md  common.h
posix/config/: CMakeLists.txt  main.c
posix/epoll/: CMakeLists.txt  main.c
posix/fork/: CMakeLists.txt  child.c  main.c
posix/signal/: CMakeLists.txt  main.c
posix/socket/: CMakeLists.txt  client-inet.c  server-inet.c
posix/socketpair/: CMakeLists.txt  main.c
read-dev-event/: README.md  read-dev-event
read-dev-input/: dump-input.py
real-time/: README.md
wayland/: README.md
wayland/examples/: client2-modif.c  make.sh  seat.c
